# Logitech-G300-AutoLedSwitcher

./: CMakeLists.txt  README.md  main.c
notes/: buttons  profiles  protocol
